# memvid-sdk

./: .gitignore  Cargo.toml  PKG-INFO  README.md  configure.sh  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.github/workflows/: claude.yml  issue-triage.yml
bindings/python/: Cargo.toml  README.md  status.md
bindings/python/examples/dataset/: email_001_20230430_Co-investment_opport.txt  email_002_20230627_Sector_rotation_stra.txt  email_003_20240315_Debt_refinancing_opt.txt  email_004_20240129_Sector_rotation_stra.txt  email_005_20230904_Due_diligence_update.txt  email_006_20241222_Debt_refinancing_opt.txt  email_007_20240907_Sector_rotation_stra.txt  email_008_20231108_Management_team_chan.txt  email_009_20240608_Q3_performance_revie.txt  email_010_20240301_Board_meeting_prepar.txt  email_011_20240725_Sector_rotation_stra.txt  email_012_20230831_Portfolio_company_co.txt  email_013_20240503_ESG_compliance_updat.txt  email_014_20240322_Debt_refinancing_opt.txt  email_015_20231127_Q3_performance_revie.txt  email_016_20230503_Co-investment_opport.txt  email_017_20240817_Q3_performance_revie.txt  (+35 more)
bindings/python/src/: lib.rs
crates/memvid-ask-model/: Cargo.toml
crates/memvid-ask-model/src/: lib.rs
crates/memvid-core/: Cargo.toml  README.md
crates/memvid-core/install/: README.md
memvid_sdk/: __init__.py  clip.py  embeddings.py  entities.py  types.py
memvid_sdk/documents/: __init__.py  xlsx.py
scripts/: build_sdk.sh  install_build_tools.sh  install_memvid_from_source.sh
tests/: conftest.py  test_advance.py  test_basic.py
(+3 files in other folders)
