[workspace]
resolver = "2"
members = ["crates/memvid-core", "crates/memvid-ask-model", "bindings/python"]
# Proprietary crates (in .gitignore, not available on CI):
# "crates/memvid-ghostpack", "crates/memvid-ghost-runtime", "crates/memvid-ghostc"

[workspace.package]
version = "2.0.131"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/0xgosu/memvid"
authors = ["Memvid Inc."]

[workspace.dependencies]
# Core dependencies shared across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
base64 = "0.21"
ed25519-dalek = { version = "2.2.0", features = ["std"] }

# Internal crates
memvid-core = { path = "crates/memvid-core" }
memvid-cli = { path = "crates/memvid-cli" }
memvid-ask-model = { path = "crates/memvid-ask-model" }
